# rust-budget-planner-tui

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: main.rs  tui.rs
tests/: budgetgroup_integreation.rs
